--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "imagvue",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "Imagvue is a image processing component for Vue.js",
   "main": "dist/imagvue.js",
   "files": [
@@ -25,10 +25,10 @@
   },
   "license": "MIT",
   "scripts": {
-    "build": "parcel build ./src/imagvue.js"
+    "build": "parcel build ./src/imagvue.js --no-source-maps --target node browser"
   },
   "devDependencies": {
-    "parcel-bundler": "^1.9.7"
+    "parcel-bundler": "^1.10.1"
   },
   "dependencies": {
     "babel-preset-env": "^1.7.0",
