--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "imagvue",
-  "version": "0.0.4",
-  "description": "Imagvue is a image processing component for Vue.js",
+  "version": "0.0.5",
+  "description": "Imagvue is an image component for Vue.js",
   "main": "dist/imagvue.js",
   "files": [
     "dist/imagvue.js"
@@ -25,10 +25,18 @@
   },
   "license": "MIT",
   "scripts": {
-    "build": "parcel build ./src/imagvue.js --no-source-maps --target node browser"
+    "build": "rollup -c"
   },
   "devDependencies": {
-    "parcel-bundler": "^1.10.1"
+    "babel-core": "^6.26.3",
+    "babel-plugin-external-helpers": "^6.22.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babelrc-rollup": "^3.0.0",
+    "rollup": "^0.66.4",
+    "rollup-plugin-babel": "^3.0.7",
+    "rollup-plugin-commonjs": "^9.1.8",
+    "rollup-plugin-node-resolve": "^3.4.0",
+    "rollup-plugin-uglify": "^6.0.0"
   },
   "dependencies": {
     "babel-preset-env": "^1.7.0",
